--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p>Inspired by Isaiah 43:19-20, we are called to make a way in the wilderness and rivers in the desert, bringing the life-giving water of Christ to those in spiritual dryness.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1518471152221-7c2c0d1616b7?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="DESPI Mission in Africa">
+                    <!-- <img src="./Gallery/475764583_1037350668435073_3056527466545572447_n.jpg" alt="DESPI Mission in Africa"> -->
                 </div>
             </div>
             
