Arrangement of content

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p>Inspired by Isaiah 43:19-20, we are called to make a way in the wilderness and rivers in the desert, bringing the life-giving water of Christ to those in spiritual dryness.</p>
                 </div>
                 <div class="about-image">
-                    <!-- <img src="./Gallery/475764583_1037350668435073_3056527466545572447_n.jpg" alt="DESPI Mission in Africa"> -->
+                    <img src="./Gallery/475764583_1037350668435073_3056527466545572447_n.jpg" alt="DESPI Mission in Africa">
                 </div>
             </div>
             
