--- a/Resources1.html
+++ b/Resources1.html
@@ -81,7 +81,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#gallery">Gallery</a>
+                        <a class="nav-link" href="./gallery.html">Gallery</a>
                     </li>
                     
                     <li class="nav-item dropdown">
